tests/builtins/errors/type_no_args.orus
fn main() {

    print(type_of())

}
